fix body scrolling behind responsive menu

--- a/app/scss/home/_responsive_menu.scss
+++ b/app/scss/home/_responsive_menu.scss
@@ -1,3 +1,8 @@
+body.menu-open {
+  overflow: hidden;
+  position: fixed;
+}
+
 .resp-menu {
   visibility: visible;
   position: fixed;
@@ -6,6 +11,9 @@
   bottom: 0;
   left: 0;
   right: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
   padding-top: 70px;
   background: #333;
   color: #fff;
